# halflife-updated

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  FULL_CHANGELOG.md  FULL_UPDATED_CHANGELOG.md  INSTALL.md  README.md  filecopy.bat
.github/workflows/: ci-cd.yml
cl_dll/: CMakeLists.txt  Exports.h  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer_Sample.cpp  GameStudioModelRenderer_Sample.h  MOTD.cpp  StudioModelRenderer.cpp  StudioModelRenderer.h  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  bench.h  camera.h  cdll_int.cpp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  demo.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  eventscripts.h  flashlight.cpp  fog.cpp  fog.h  geiger.cpp  global_consts.h  health.cpp  health.h  hud.cpp  hud.h  (+56 more)
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
cl_dll/particleman/: CBaseParticle.cpp  CBaseParticle.h  CCoreTriangleEffect.cpp  CFrustum.cpp  CFrustum.h  CMiniMem.cpp  CMiniMem.h  IParticleMan_Active.cpp  IParticleMan_Active.h  particleman.h  particleman_internal.h  pman_particlemem.h  pman_triangleffect.h
cmake/: InstallToHLDS.cmake.in  LinuxToolchain.cmake
common/: Platform.h  PlatformHeaders.h  Sequence.h  beamdef.h  cl_entity.h  com_model.h  common_types.h  con_nprint.h  const.h  crc.h  cvardef.h  demo_api.h  director_cmds.h  dlight.h  dll_state.h  entity_state.h  entity_types.h  enums.h  event_api.h  event_args.h  event_flags.h  hltv.h  in_buttons.h  interface.h  ivoicetweak.h  mathlib.cpp  mathlib.h  net_api.h  netadr.h  parsemsg.cpp  parsemsg.h  particledef.h  pmtrace.h  port.h  qfont.h  r_efx.h  r_studioint.h  ref_params.h  screenfade.h  studio_event.h  (+3 more)
dlls/: CMakeLists.txt  Cargo.toml  NewEffects.cpp  UserMessages.cpp  UserMessages.h  Wxdebug.cpp  activity.h  activitymap.h  aflock.cpp  agrunt.cpp  airtank.cpp  animating.cpp  animation.cpp  animation.h  apache.cpp  barnacle.cpp  barney.cpp  basemonster.h  bigmomma.cpp  bloater.cpp  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  client.h  combat.cpp  controller.cpp  crossbow.cpp  crowbar.cpp  decals.h  defaultai.cpp  defaultai.h  deserteagle.cpp  doors.cpp  doors.h  effects.cpp  effects.h  (+114 more)
dlls/wpn_shared/: hl_wpn_glock.cpp
dmc/cl_dll/: DMC_Teleporters.cpp  Exports.h  GameStudioModelRenderer.cpp  MOTD.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  cdll_int.cpp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  entity.cpp  ev_hldm.cpp  health.cpp  hud_iface.h  hud_redraw.cpp  hud_spectator.cpp  in_camera.cpp  in_defs.h  input.cpp  inputw32.cpp  menu.cpp  saytext.cpp  scoreboard.cpp  tri.cpp  util.cpp  util.h  vgui_ScorePanel.cpp  vgui_ScorePanel.h  vgui_ServerBrowser.cpp  view.cpp  voice_status.cpp
dmc/dlls/: animation.cpp  cbase.cpp  cbase.h  client.cpp  combat.cpp  effects.cpp  extdll.h  func_break.cpp  items.cpp  maprules.cpp  multiplay_gamerules.cpp  nodes.cpp  plats.cpp  player.cpp  sound.cpp  util.cpp  util.h  weapons.cpp
dmc/pm_shared/: pm_math.cpp  pm_shared.cpp
docs/tutorials/: setting-up-and-using-dotnet-script.md  setting-up-dotnet-sdk.md
engine/: APIProxy.h  anorms.h  cdll_int.h  custom.h  customentity.h  edict.h  eiface.h  progdefs.h  progs.h  shake.h  studio.h
fgd/: halflife.fgd
game_shared/: GameEvent.h  bitvec.h  filesystem_utils.cpp  filesystem_utils.h  perf_counter.h  shared_util.cpp  shared_util.h  simple_checksum.h  steam_util.h  vgui_checkbutton2.cpp  vgui_checkbutton2.h  vgui_defaultinputsignal.h  vgui_grid.cpp  vgui_grid.h  vgui_helpers.cpp  vgui_helpers.h  vgui_listbox.cpp  vgui_listbox.h  vgui_loadtga.cpp  vgui_loadtga.h  vgui_scrollbar2.cpp  vgui_scrollbar2.h  vgui_slider2.cpp  vgui_slider2.h  voice_banmgr.cpp  voice_banmgr.h  voice_common.h  voice_gamemgr.cpp  voice_gamemgr.h  voice_status.cpp  voice_status.h  voice_status_hud.cpp  voice_status_hud.h  voice_vgui_tweakdlg.cpp  voice_vgui_tweakdlg.h
game_shared/bot/: bot.cpp  bot.h  bot_constants.h  bot_manager.cpp  bot_manager.h  bot_profile.cpp  bot_profile.h  bot_util.cpp  bot_util.h  improv.h  nav.h  nav_area.cpp  nav_area.h  nav_file.cpp  nav_node.cpp  nav_node.h  nav_path.cpp  nav_path.h  simple_state_machine.h
linux/: .gitignore  Makefile  Makefile.dmc_cdll  Makefile.dmcdll  Makefile.hl_cdll  Makefile.hldll  Makefile.ricochet_cdll  Makefile.ricochetdll  gendbg.sh  libSDL2-2.0.so.0.4.1.dbg
network/: delta.lst
pm_shared/: pm_debug.cpp  pm_debug.h  pm_defs.h  pm_info.h  pm_materials.h  pm_math.cpp  pm_movevars.h  pm_shared.cpp  pm_shared.h
projects/: readme.txt
projects/vs2017/: .gitignore  bspinfo.vcxproj  dmc.sln  dmc_cdll.vcxproj  dmc_cdll.vcxproj.filters  dmcdll.vcxproj  dmcdll.vcxproj.filters  hl_cdll.vcxproj  hl_cdll.vcxproj.filters  hldll.vcxproj  hldll.vcxproj.filters  light.vcxproj  makefont.vcxproj  mdlviewer.vcxproj  projects.sln  qcsg.vcxproj  qlumpy.vcxproj  ricochet.sln  ricochet_cdll.vcxproj  ricochet_cdll.vcxproj.filters  ricochetdll.vcxproj  ricochetdll.vcxproj.filters  serverctrl.vcxproj  sprgen.vcxproj  vis.vcxproj  xwad.vcxproj
projects/vs2019/: CMakeLists.txt  NewEffects.cpp  NewEffects.h  bspinfo.vcxproj  bspinfo.vcxproj.filters  dmc.sln  dmc_cdll.vcxproj  dmcdll.vcxproj  hl_cdll.vcxproj  hl_cdll.vcxproj.filters  hldll.vcxproj  hldll.vcxproj.filters  light.vcxproj  light.vcxproj.filters  makefont.vcxproj  makefont.vcxproj.filters  makels.vcxproj  mdlviewer.vcxproj  mdlviewer.vcxproj.filters  mkmovie.vcxproj  mkmovie.vcxproj.filters  procinfo.vcxproj  projects.sln  qbsp2.vcxproj  qbsp2.vcxproj.filters  qcsg.vcxproj  qcsg.vcxproj.filters  qlumpy.vcxproj  qlumpy.vcxproj.filters  qrad.vcxproj  qrad.vcxproj.filters  readme.txt  ricochet.sln  ricochet_cdll.vcxproj  ricochetdll.vcxproj  ricochetdll.vcxproj.filters  serverctrl.vcxproj  smdlexp.vcxproj  (+9 more)
public/: FileSystem.h  archtypes.h  interface.cpp  interface.h  keydefs.h  particleman.h  pman_particlemem.h  pman_triangleffect.h
(+230 files in other folders)
